frontend: style: fix Editor preview overflow

--- a/static/style.css
+++ b/static/style.css
@@ -241,3 +241,8 @@ body {
     height: 600px;
     overflow: auto;
 }
+
+.manage-edit .editor-area .preview * {
+    max-width: 100%;
+    white-space:  pre-wrap;
+}
